--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.7.0",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "inversify": "^6.0.1",
